--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,11 @@
 {% extends 'main.html' %}
 {% block content %}
-hi
+<div class="">
+    
+        {% for room in rooms %}
+            <div class="">
+                <a href="{% url 'rooms' room.id %}" >{{room.id}}--{{room.name}}</a>
+            </div>
+        {%endfor%}
+</div>
 {% endblock content %}
